(feat) DB & Projects endpoint

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@repo/db",
   "exports": {
-    "./client.ts": "./client.ts"
+    "./client": "./client.ts"
   },
   "version": "1.0.0",
   "description": "",
